# lachuoi

./: .gitignore  Cargo.toml  Containerfile  Containerfile.master  Containerfile.worker  LICENSE  README  README.md  _env  cron.toml  dotenv  hello_src.rs  justfile  master-sample.env  runtime-config.toml  sample-cron.toml  schema.sql  schema.sql.toml  spin.dev.toml  spin.toml  worker-sample.env
.github/workflows/: build.yml  container.yml
apps/: README.md
apps/_hello-go/: .gitignore  go.mod  main.go  spin.toml
apps/_hello-python/: pyproject.toml  spin.toml
apps/ap-user/: Cargo.toml  spin.toml
apps/ap-user/src/: lib.rs
apps/fq-test/: Cargo.toml  spin.toml
apps/geoip/: Cargo.toml  README.md  spin.toml
apps/geoip/src/: lib.rs
apps/hello-go/: spin.toml
apps/hello-grain/: spin.toml
apps/hello-grain/src/: main.gr
apps/ifconfig/: Cargo.toml  README.md
apps/ifconfig/src/: lib.rs
apps/image-description/: Cargo.toml  spin.toml
apps/image-description/src/: lib.rs
apps/image-upload/: Cargo.toml
apps/ip/: Cargo.toml
apps/ipconfig/: Cargo.toml  spin.toml
apps/ipconfig/src/: lib.rs
apps/logger/src/: lib.rs
apps/mstd-random-cafe/: Cargo.toml
apps/mstd-random-cafe/src/: lib.rs
apps/mstd-random-restaurant/: Cargo.toml  justfile  spin.toml
apps/mstd-random-restaurant/src/: lib.rs
apps/mstd-servant/: Cargo.toml
apps/mstd-servant/src/: lib.rs
apps/mstd-wsj-rss/: Cargo.toml  spin.toml
apps/mstd-wsj-rss/src/: lib.rs
apps/newspenguin-rss/: Cargo.toml  README.md  spin.toml
apps/newspenguin-rss/src/: lib.rs
apps/place/: Cargo.toml  spin.toml
apps/place-population/: Cargo.toml
apps/place-random/: Cargo.toml  spin.toml
apps/place-random/src/: lib.rs
apps/place-timezone/: spin.toml
apps/random-place/: Cargo.toml  README  spin.toml
apps/random-place/src/: lib.rs
apps/request-catcher/: Cargo.toml  README.md
apps/root/: Cargo.toml  spin.toml
apps/ssl-check/: Cargo.toml  spin.toml
apps/time/: Cargo.toml
apps/utc/: Cargo.toml
apps/webfinger/: Cargo.toml  spin.toml
apps/wsj-rss/: Cargo.toml  README.md
assets/: mstd-servant-news-feeds.json5  random-place-wegith.hjson  wsj-news-feeds.hjson
doc/: DESIGN.md  WASM_DEVELOPER_GUIDE.md
plugins/: hello.wasm
resource/geoip/: README.txt
src/: async_scheduler.rs  config.rs  db.rs  lib.rs  main.rs  native_handlers.rs  rpc.rs  scheduler.rs  task.rs  task_config.rs  wasm_handlers.rs  web.rs
src/web/: handlers.rs  login.rs  mod.rs
systemd/: README.md  lachuoi-worker.service  lachuoi.service
wasm/: .gitkeep
web/css/: styles.css
web/js/: app.js
web/templates/: login.html  status.html  task_logs.html  webhook_status.html  workers.html
(+6 files in other folders)
