[package]
name = "task-scheduler"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Seungjin Kim"]

[dependencies]
chrono = "0.4.44"
cron = "0.16.0"
tokio = { version = "1.52.1", features = ["full"] }
uuid = { version = "1.23.1", features = ["v4"] }
libsql = { version = "0.6.0", features = ["remote"] }
dotenvy = "0.15.7"
chrono-tz = "0.10.0"
wasmtime = "29.0.0"
wasmtime-wasi = "29.0.0"
wasmtime-wasi-http = "29.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
axum = { version = "0.7.9", features = ["macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
tower-http = { version = "0.6", features = ["fs"] }
os_pipe = "1.2"
gag = "1.0"
async-trait = "0.1"
bytes = "1.0"
sha2 = "0.11.0"
oauth2 = "5.0.0"
tower-sessions = { version = "0.12", features = ["default", "memory-store"] }
reqwest = { version = "0.13.2", features = [
  "form",
  "json",
  "multipart",
  "rustls",
] }
anyhow = "1.0.102"
rand = "0.10.1"
urlencoding = "2.1.3"
