[package]
name = "image-description"
authors = ["Seungjin Kim <seungjin@duck.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
base64 = "0.22.1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
mime = "0.3.17"
multipart-2021 = "0.19.0"
serde_json = "1.0.140"
# The Spin SDK.
spin-sdk = { git = "https://github.com/spinframework/spin-rust-sdk" }
uuid = { version = "1", features = ["v4", "v7", "fast-rng"] }

[workspace]
